# AP

./: .gitignore  README.md  fz21ksua.1fp.txt  hp3fqs1o.zs5.txt
Android/C_IPOPT_Test/app/: CMakeLists.txt  build.gradle
Android/C_IPOPT_Test/app/src/main/cpp/: asl.h  asl_pfgh.h  config.h  config_default.h  funcadd.h  getstub.h  nlp.h  nlp2.h  psinfo.h  stdio1.h
Android/C_IPOPT_Test/app/src/main/cpp/Algorithm/: IpAdaptiveMuUpdate.cpp  IpAlgBuilder.cpp  IpAlgBuilder.hpp  IpAlgStrategy.hpp  IpAlgorithmRegOp.cpp  IpAlgorithmRegOp.hpp  IpBacktrackingLineSearch.cpp  IpEquilibrationScaling.cpp  IpFilter.cpp  IpFilter.hpp  IpFilterLSAcceptor.cpp  IpIpoptAlg.hpp  IpIpoptCalculatedQuantities.hpp  IpMonotoneMuUpdate.cpp  IpMonotoneMuUpdate.hpp  IpOrigIpoptNLP.hpp  IpPDSystemSolver.hpp  IpStdAugSystemSolver.cpp  IpTimingStatistics.hpp
Android/C_IPOPT_Test/app/src/main/cpp/Algorithm/Inexact/: IpInexactRegOp.cpp  IpInexactRegOp.hpp  IpInexactTSymScalingMethod.cpp  IpInexactTSymScalingMethod.hpp
Android/C_IPOPT_Test/app/src/main/cpp/Algorithm/LinearSolvers/: IpIterativeWsmpSolverInterface.cpp  IpLinearSolversRegOp.cpp  IpLinearSolversRegOp.hpp  IpMa27TSolverInterface.cpp  IpMa28TDependencyDetector.cpp  IpMa57TSolverInterface.cpp  IpMa86SolverInterface.cpp  IpMa97SolverInterface.cpp  IpMc19TSymScalingMethod.cpp  IpMc19TSymScalingMethod.hpp  IpPardisoSolverInterface.cpp  IpSlackBasedTSymScalingMethod.cpp  IpSparseSymLinearSolverInterface.hpp  IpSymLinearSolver.hpp  IpTSymScalingMethod.hpp  IpWsmpSolverInterface.cpp  hsl_mc68i.h
Android/C_IPOPT_Test/app/src/main/cpp/Apps/AmplSolver/: AmplTNLP.hpp
Android/C_IPOPT_Test/app/src/main/cpp/Common/: IpOptionsList.cpp  IpRegOptions.cpp  IpUtils.cpp  IpoptConfig.h  config.h
Android/C_IPOPT_Test/app/src/main/cpp/Interfaces/: IpAlgTypes.hpp  IpInterfacesRegOp.cpp  IpInterfacesRegOp.hpp  IpIpoptApplication.cpp  IpNLP.hpp  IpSolveStatistics.hpp  IpStdCInterface.cpp  IpStdInterfaceTNLP.hpp  IpTNLP.hpp  IpTNLPAdapter.cpp
Android/C_IPOPT_Test/app/src/main/cpp/LinAlg/: IpBlas.cpp  IpBlas.hpp  IpCompoundMatrix.cpp  IpCompoundMatrix.hpp  IpCompoundSymMatrix.cpp  IpCompoundSymMatrix.hpp  IpCompoundVector.hpp  IpDenseGenMatrix.hpp  IpDenseVector.cpp  IpDenseVector.hpp  IpExpandedMultiVectorMatrix.hpp  IpExpansionMatrix.hpp  IpIdentityMatrix.hpp  IpLapack.cpp  IpLapack.hpp  IpLowRankUpdateSymMatrix.hpp  IpMultiVectorMatrix.hpp  IpScaledMatrix.hpp  IpSumMatrix.cpp  IpSumMatrix.hpp  IpSumSymMatrix.cpp  IpSumSymMatrix.hpp  IpSymMatrix.hpp  IpSymScaledMatrix.hpp  IpVector.hpp  IpZeroMatrix.hpp  IpZeroSymMatrix.hpp
Android/C_IPOPT_Test/app/src/main/cpp/LinAlg/TMatrices/: IpSymTMatrix.hpp  IpTripletHelper.hpp
Android/C_IPOPT_Test/app/src/main/cpp/contrib/CGPenalty/: IpCGPenaltyData.hpp  IpCGPenaltyLSAcceptor.cpp  IpCGPenaltyRegOp.cpp  IpCGPenaltyRegOp.hpp
Android/C_IPOPT_Test/app/src/main/java/com/example/zachariemaloney/c_ipopt_test/: MainActivity.java
Android/C_IPOPT_Test/app/src/main/res/values/: strings.xml
Android/C_IPOPT_Test/app/src/test/java/com/example/zachariemaloney/c_ipopt_test/: ExampleUnitTest.java
Android/empalink-sample-project-android-master/: settings.gradle
Control Algorithm Conversion/Java Control Algorithm/: build.xml
Device APIs/Empatica/: Install Sample Code of Empatica.docx
Experiments Data/: Armband_Interpolated 1 min_Firstday.xlsx  Armband_Interpolated 1 min_secondday.xlsx  Armband_Interpolated 1 min_thirdday.xlsx  Basal_Interpolated 1 min_Secondday.xlsx  Bolus_Interpolated 1 min_Firstday.xlsx  Bolus_Interpolated 1 min_Secondday.xlsx  Bolus_Interpolated 1 min_Thirdday.xlsx  CGM_Interpolated 1 min_Firstday.xlsx  CGM_Interpolated 1 min_Thirdday.xlsx  Chestband_Interpolated 1 min_Firstday.xlsx  Chestband_Interpolated 1 min_Thirdday.xlsx
Java/DIAS/: build.xml
MATLAB/Algorithm/: opt_recursive.java
MATLAB/CL_GUI/: CGM_SEDFR_JF.m  CPA_Module_paralleled_calculation_JF.m  LW_PLS_original_JF.m  cluster1_JF.m  controller_horizon.m  controller_ins.m  deneme.m  error_display_JF.m  m20141215_ukf_meal.m  m20150308_detection_of_meal.m  m20150510_hypo_algorithm.m  m20150510_hypo_algorithm_exercise.m  m20150510_hypo_algorithm_sleep.m  m20150711_get_armband_data.m  m20150711_gpc.m  m20150711_hypo_alarm.m  m20150711_load_global_variables.m  m20150711_load_global_variables_from_history.m  m20150711_run_meal_detection_bolus_algorithm.m  m20150711_save_global_variables_to_history.m  m20151015_sgolay_smooth_derivative_fast.m  m20160509_CL_GUI.fig  m20160509_CL_GUI.m  m20160516_FDD.m  m20160516_calculate_pred.m  opt_recursive.m  prediction_horizon.m  prevdata.mat  send_text_message.m  temp_SEDFR_nonoise.mat  temp_prevdata.mat  test_initial.m  track.mat  zmu_JF.asv
MATLAB/CL_With_Empatica/: Error_commend_window2016-08-31_08-14-11.txt  Error_commend_window2016-08-31_08-14-12.txt  Error_commend_window2016-08-31_08-14-13.txt  Error_commend_window2016-08-31_08-16-04.txt  Error_commend_window2016-08-31_08-16-05.txt  Error_commend_window2016-08-31_08-18-32.txt  Error_commend_window2016-08-31_08-18-33.txt  Error_commend_window2016-08-31_08-18-35.txt  Error_commend_window2016-08-31_08-18-36.txt  Error_commend_window2016-08-31_08-19-13.txt  Error_commend_window2016-08-31_08-19-14.txt  Error_commend_window2016-08-31_08-19-15.txt  Error_commend_window2016-08-31_09-25-00.txt  Error_commend_window2016-08-31_09-38-37.txt  Error_commend_window2016-08-31_09-38-38.txt  Error_commend_window2016-08-31_09-38-39.txt  Error_commend_window2016-08-31_09-39-01.txt  Error_commend_window2016-08-31_09-39-02.txt  Error_commend_window2016-08-31_09-39-03.txt  Error_commend_window2016-09-01_09-49-01.txt  Error_commend_window2016-09-01_09-49-02.txt  Error_commend_window2016-09-01_09-49-04.txt  Error_commend_window2016-09-01_09-49-05.txt  Error_commend_window2016-09-01_09-49-06.txt  Error_commend_window2016-09-02_10-01-01.txt  Error_commend_window2016-09-02_10-01-06.txt  Error_commend_window2016-10-14_16-34-41.txt  Error_commend_window2016-10-14_16-34-42.txt  Error_commend_window2016-10-14_16-34-43.txt  Error_commend_window2016-10-14_17-12-47.txt  (+559 more)
(+6365 files in other folders)
